2010-03-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Fix an
	error when FILENAME and NEWNAME are existing remote directories.

	* tramp-compat.el (tramp-compat-make-temp-file): Add optional
	parameter DIR-FLAG.

2010-02-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-write-region): START can be a string.
	Take care in the checks.  Reported by Dan Davison
	<davison@stats.ox.ac.uk>.

2010-02-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Protect
	setting the modes by `ignore-errors'.  It might fail, for example
	if the file is not owned by the user but the group.
	(tramp-handle-write-region): Ensure, that `tmpfile' is always readable.

2010-02-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-directory-files): When FULL, do not
	expand "." and "..".  Reported by Thierry Volpiatto
	<thierry.volpiatto@gmail.com>.

2010-02-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): Set always the
	permissions of the temporary file to "0600".  In case the remote
	file has no read permissions for the owner, there might be
	problems otherwise.  Reported by Ole Laursen <olau@iola.dk>.

2010-02-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Fix errors
	in copying directories.
	(tramp-handle-add-name-to-file, tramp-handle-copy-directory)
	(tramp-do-copy-or-rename-file, tramp-handle-delete-directory)
	(tramp-handle-delete-file)
	(tramp-handle-dired-recursive-delete-directory)
	(tramp-handle-write-region): Flush also the cache for the upper
	directory.

2010-02-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-process-actions, tramp-read-passwd):
	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection): Use VEC
	instead of PROC for caching "first-password-request".  Otherwise,