@@ -1,3 +1,12 @@
+2010-03-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-find-executable): Use
+	`tramp-get-connection-buffer'.  Make the regexp for checking
+	output of "wc -l" more robust.
+	(tramp-find-shell): Use another shell but /bin/sh on OpenSolaris.
+	(tramp-open-connection-setup-interactive-shell): Remove workaround
+	for OpenSolaris bug, it is not needed anymore.
+
 2010-03-02  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Fix an
